			   XPCE ChangeLog
			   ==============


VERSION 6.2.21, distributed with SWI-Prolog 5.3.14
==================================================

* ADDED/FIXED: untab/retab of tabs in the class tabbed_window.

* FIXED: Scrollbar update for windows used as graphicals (i.e. displayed
  on other windows).


VERSION 6.2.20, distributed with SWI-Prolog 5.3.13
==================================================

* FIXED: avoid trying to build GUI reporting for errors from user input.
  Dmitry.

* FIXED: Pass $(LDFLAGS) in generating Prolog interface.  Paulo Moura.


VERSION 6.2.19, distributed with SWI-Prolog 5.3.12
==================================================

* ADDED: Create CLASSINDEX.pl in XPCE library insex file.

* FIXED: PceEmacs: restore of syntax after processing a file.  Dmitry.

* ENHANCED: Improve checking of arguments in pce_begin_class.  After
  message from Joao Mariz.

* FIXED: PceEmacs: handle exported operators in colouring.


VERSION 6.2.18, distributed with SWI-Prolog 5.3.10
==================================================

* ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
  handling for embedded applications on ELF-based systems.


VERSION 6.2.17, distributed with SWI-Prolog 5.3.9
=================================================

* ADDED: PceEmacs to determine mode from arbitrary patterns on the content.
  See emacs_content_mode/3 in library('emacs/emacs.pl').

* ADDED: CHR support in the cross-referencer and colours to the
  PceEmacs chr mode.

* FIXED: Bug#142: Buffer overflow on menus with > 1000 items.  Limit
  has been removed.  Holger Kanwischer.

* MODIFIED: class compiler operator issues to exploit the new
  library(operators).


VERSION 6.2.16, distributed with SWI-Prolog 5.3.7
=================================================

* FIXED: PceEmacs: make matching bracket highlighting work after
  text-modifying commands.

* FIXED: cross-referencer to handle #! script file.

